--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,7 +31,7 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    width: 250px;
+    width: 280px;
     height: 500px;
     border-radius: 20px;
     box-shadow:0px 0px 8px rgba(0, 0, 0, 0.36) ;
@@ -51,4 +51,14 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
     
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+   
 }
