--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,8 +31,8 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    width: 280px;
-    height: 500px;
+    width: 250px;
+    height: 515px;
     border-radius: 20px;
     box-shadow:0px 0px 8px rgba(0, 0, 0, 0.36) ;
     transition: width .5s, height .5s;
@@ -45,6 +45,8 @@ section#login > div#imagem {
     height: 200px;
     background-size: cover;
     background-position: left top;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 section#login > div#formulario {
@@ -61,4 +63,57 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
    
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color:#306967 ;
+}
+
+form > a.button {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin: 5px;
+    padding-top: 7px;
+    background-color:white ;
+    border: 1px solid #49a09d ;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #306967;
+}
+
+form > a.button > span {
+    font-size: 0.8em;
+}
+
+form > a.button:hover {
+    background-color:#62d7d3 ;
 }
