--- a/estilo/media-query.css
+++ b/estilo/media-query.css
@@ -7,6 +7,7 @@
     }
     section#login{
         width: 80vw;
+        height:290px;
     }
 
     section#login > div#imagem {
@@ -19,6 +20,8 @@
         float: right;
         width:70%;
     }
+
+
 }
 
 @media screen and (min-width: 992px) {
@@ -30,6 +33,7 @@
 
     section#login {
         width: 900px;
+        height: 360px;
     }
 
     section#login > div#imagem {
@@ -44,7 +48,9 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin-top: 20px;
+        margin-bottom: 20px;
         
     }
 }
